// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCollection should render with fields 1`] = `
<DocumentFragment>
  <div
    data-testid="LinkCollectionContainer"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollectionContainer__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div
        data-testid="LinkCollectionContainer__collapse-toggle"
      >
        <div
          class="sc-AxjAm iepfoc flex items-center justify-center w-5 h-5 rounded-full text-theme-primary bg-theme-primary-contrast"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
    <p
      class="mt-2 text-theme-neutral-dark"
      data-testid="LinkCollectionContainer__description"
    >
      Tell people more about yourself through social media
    </p>
    <div
      aria-hidden="true"
      data-testid="LinkCollectionContainer__collapse"
      style="height: 0px; max-height: auto; opacity: 0; overflow: hidden;"
    >
      <div
        class="mt-4"
      >
        <form
          class="grid col-gap-2 row-gap-4"
          data-testid="LinkCollectionForm"
          style="grid-template-columns: 40% 60%;"
        >
          <fieldset
            class="sc-AxhCb ckQmOL flex flex-col space-y-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
              data-testid="FormLabel"
              for="type"
            >
              Add media
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="relative w-full"
            >
              <input
                class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                data-testid="select-list__input"
                name="type"
                readonly=""
                type="text"
                value=""
              />
              <div
                class="relative w-full cursor-pointer"
              >
                <div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-1-label downshift-1-toggle-button"
                    class="sc-fzplWN jAabRP   "
                    data-testid="select-list__toggle-button"
                    id="downshift-1-toggle-button"
                    type="button"
                  />
                  <ul
                    aria-labelledby="downshift-1-label"
                    class="sc-fznyAO dPDaFu"
                    id="downshift-1-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
                <div
                  class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                >
                  <div
                    class="sc-AxjAm dKDmBo"
                    height="8"
                    width="8"
                  >
                    <svg>
                      arrowdown.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="sc-AxhCb ckQmOL flex flex-col space-y-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
              data-testid="FormLabel"
              for="value"
            >
              Link
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <input
              class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
              data-testid="LinkCollectionForm__value"
              name="value"
            />
          </fieldset>
          <button
            class="sc-AxiKw jBPYDN col-span-2"
            color="primary"
            data-testid="LinkCollectionForm__submit"
            type="submit"
          >
            Add Link
          </button>
        </form>
        <p
          class="mt-8 mb-2 text-sm text-theme-neutral-dark font-semibold"
          data-testid="LinkCollection__label"
        >
          Your media
        </p>
        <div
          data-testid="LinkCollectionTable"
        >
          <div
            class="sc-fznZeY gcZndM"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top "
                    >
                      <div>
                        Name
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxjAm hdgaLj"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top "
                    >
                      <div>
                        Link
                      </div>
                      <div
                        class="flex items-center ml-2 text-theme-color-neutral"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxjAm hdgaLj"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top "
                    >
                      <div>
                         
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="font-semibold border-b border-theme-neutral-200"
                  data-testid="LinkCollectionTable__row"
                >
                  <td
                    class="w-40 pb-6 pt-2"
                    data-testid="LinkCollectionTable__row__type"
                  >
                    <input
                      class="hidden"
                      name="socialMedia[0].type"
                      readonly=""
                      value="facebook"
                    />
                    <span>
                      Facebook
                    </span>
                  </td>
                  <td
                    class="pb-6 pt-2"
                    data-testid="LinkCollectionTable__row__value"
                  >
                    <input
                      class="focus:outline-none"
                      name="socialMedia[0].value"
                      readonly=""
                      value="https://facebook.com"
                    />
                  </td>
                  <td
                    class="w-16 text-right pb-4"
                  >
                    <button
                      class="sc-AxiKw jEmgKd"
                      color="primary"
                      data-testid="LinkCollectionTable__remove-link"
                      type="button"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </button>
                  </td>
                </tr>
                <tr
                  class="font-semibold border-b border-theme-neutral-200"
                  data-testid="LinkCollectionTable__row"
                >
                  <td
                    class="w-40 py-6"
                    data-testid="LinkCollectionTable__row__type"
                  >
                    <input
                      class="hidden"
                      name="socialMedia[1].type"
                      readonly=""
                      value="instagram"
                    />
                    <span>
                      Instagram
                    </span>
                  </td>
                  <td
                    class="py-6"
                    data-testid="LinkCollectionTable__row__value"
                  >
                    <input
                      class="focus:outline-none"
                      name="socialMedia[1].value"
                      readonly=""
                      value="https://instagram.com"
                    />
                  </td>
                  <td
                    class="w-16 text-right false"
                  >
                    <button
                      class="sc-AxiKw jEmgKd"
                      color="primary"
                      data-testid="LinkCollectionTable__remove-link"
                      type="button"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should render without fields 1`] = `
<DocumentFragment>
  <div
    data-testid="LinkCollectionContainer"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollectionContainer__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div
        data-testid="LinkCollectionContainer__collapse-toggle"
      >
        <div
          class="sc-AxjAm iepfoc flex items-center justify-center w-5 h-5 rounded-full text-theme-primary bg-theme-primary-contrast"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
    <p
      class="mt-2 text-theme-neutral-dark"
      data-testid="LinkCollectionContainer__description"
    >
      Tell people more about yourself through social media
    </p>
    <div
      aria-hidden="true"
      data-testid="LinkCollectionContainer__collapse"
      style="height: 0px; max-height: auto; opacity: 0; overflow: hidden;"
    >
      <div
        class="mt-4"
      >
        <form
          class="grid col-gap-2 row-gap-4"
          data-testid="LinkCollectionForm"
          style="grid-template-columns: 40% 60%;"
        >
          <fieldset
            class="sc-AxhCb ckQmOL flex flex-col space-y-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
              data-testid="FormLabel"
              for="type"
            >
              Add media
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="relative w-full"
            >
              <input
                class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
                data-testid="select-list__input"
                name="type"
                readonly=""
                type="text"
                value=""
              />
              <div
                class="relative w-full cursor-pointer"
              >
                <div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-0-label downshift-0-toggle-button"
                    class="sc-fzplWN jAabRP   "
                    data-testid="select-list__toggle-button"
                    id="downshift-0-toggle-button"
                    type="button"
                  />
                  <ul
                    aria-labelledby="downshift-0-label"
                    class="sc-fznyAO dPDaFu"
                    id="downshift-0-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
                <div
                  class="sc-AxgMl sc-Axmtr hWILTO w-10 pointer-events-none text-theme-neutral"
                >
                  <div
                    class="sc-AxjAm dKDmBo"
                    height="8"
                    width="8"
                  >
                    <svg>
                      arrowdown.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="sc-AxhCb ckQmOL flex flex-col space-y-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
              data-testid="FormLabel"
              for="value"
            >
              Link
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <input
              class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
              data-testid="LinkCollectionForm__value"
              name="value"
            />
          </fieldset>
          <button
            class="sc-AxiKw jBPYDN col-span-2"
            color="primary"
            data-testid="LinkCollectionForm__submit"
            type="submit"
          >
            Add Link
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
